# paperclips

./: .gitignore  .paperclips.jsonl  .papercuts.jsonl  AGENTS.md  Cargo.toml  README.md  model-performance-journal.md
.claude/skills/: rust-agent-cli
.claude/skills/rust-agent-cli/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
crates/paper-core/: Cargo.toml
crates/paper-core/src/: cli.rs  error.rs  lib.rs  output.rs  secrets.rs  store.rs
crates/paper-core/src/commands/: add.rs  doctor.rs  list.rs  mod.rs  resolve.rs  schema.rs
crates/paperclip/: Cargo.toml
crates/paperclip/src/: commands.rs  main.rs  review.rs
crates/papercuts/: Cargo.toml
crates/papercuts/src/: lib.rs  main.rs
crates/papercuts/tests/: cli.rs
docs/plans/: 2026-07-09-papercuts-design.md
src/: cli.rs  error.rs  lib.rs  main.rs  store.rs
src/commands/: add.rs  doctor.rs  list.rs
tests/: cli.rs
