[package]
name = "paper-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Shared storage engine for papercuts and paperclips."
repository = "https://github.com/dlorp/paperclips"

[dependencies]
clap = { version = "4", features = ["derive"] }
jiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
