[package]
name = "papercuts"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A tiny CLI for AI agents to log the papercuts they hit during work. Fork of treygoff24/papercuts."
repository = "https://github.com/dlorp/paperclips"

[dependencies]
paper-core = { path = "../paper-core" }
clap = { version = "4", features = ["derive"] }
jiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
